k8s/base/ceerat-user-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ceerat-user-service
  namespace: ceerat-backend
  labels:
    app.kubernetes.io/name: ceerat-user-service
    app.kubernetes.io/part-of: ceerat
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: ceerat-user-service
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ceerat-user-service
        app.kubernetes.io/part-of: ceerat
    spec:
      containers:
        - name: ceerat-user-service
          image: ceerat-services-repo
          imagePullPolicy: IfNotPresent
          command:
            - /app/ceerat-user-service
          ports:
            - name: grpc
              containerPort: 50051
          readinessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 50051
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
