k8s/base/ceerat-user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceerat-user-service
  namespace: ceerat-backend
  labels:
    app.kubernetes.io/name: ceerat-user-service
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ceerat-user-service
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
    - name: admin-http
      port: 8081
      targetPort: admin-http
